fixed loading and error  display on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body,
 .separator {
   display: flex;
   justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
   padding-top: 100px;
 }
@@ -37,7 +38,8 @@ body,
 }
 
 .error {
-  width: 320px;
+  min-width: 320px;
+  max-width: 90%;
   padding: 0 0 16px 0 !important;
   margin: auto;
   background-color: #ffecec;
@@ -63,5 +65,12 @@ body,
 
   100% {
     transform: rotate(360deg);
+  }
+}
+
+
+@media screen and (max-width: 1080px) {
+  .separator {
+    flex-direction: column;
   }
 }
